--- a/f.html
+++ b/f.html
@@ -1,2 +1,12 @@
-<!DOCTYPE html>
-<form action="" method="post"></form>
+!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
