--- a/f.html
+++ b/f.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Hello world</h1>
+<p>project-3</p>
 
 </body>
 </html>
