--- a/f.html
+++ b/f.html
@@ -10,3 +10,9 @@
 
 </body>
 </html>
+<body>
+
+      <h1 style="background-color:powderblue;">This is a heading</h1>
+      <p style="background-color:tomato;">This is a paragraph.</p>
+      
+      </body>
