--- a/f.html
+++ b/f.html
@@ -1,18 +1,1 @@
-!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
-
-<h1>Hello world</h1>
-<p>project-3</p>
-
-</body>
-</html>
-<body>
-
-      <h1 style="background-color:powderblue;">This is a heading</h1>
-      <p style="background-color:tomato;">This is a paragraph.</p>
-      
-      </body>
+hello
